debian/rules: Add imx8mq platform.
Build imx8mq with DEBUG=0, as otherwise the binary is too large and
fails to build.

--- a/debian/rules
+++ b/debian/rules
@@ -14,6 +14,7 @@ VERBOSE=1
 endif
 
 platforms := g12a gxbb sun50i_a64 sun50i_h6 rk3328 rk3399 rpi3 rpi4
+platforms_nodebug := imx8mq
 target = $(if $(filter rk3328 rk3399,$@),bl31/bl31.elf,bl31.bin)
 
 %:
@@ -27,11 +28,15 @@ ifeq ($(filter pkg.arm-trusted-firmware.notools,$(DEB_BUILD_PROFILES)),)
 endif
 # Only build firmware on arm64.
 ifeq ($(DEB_HOST_ARCH),arm64)
-  override_dh_auto_build: $(platforms)
+  override_dh_auto_build: $(platforms) $(platforms_nodebug)
   $(platforms):
 	# Always set CROSS_COMPILE, which also works for native builds.
 	CROSS_COMPILE=aarch64-linux-gnu- CFLAGS= LDFLAGS= dh_auto_build -- V=$(VERBOSE) DEBUG=1 PLAT=$@ bl31
 	install -m644 build/$@/debug/$(target) -Dt build/renamed/$@
+  $(platforms_nodebug):
+	# Always set CROSS_COMPILE, which also works for native builds.
+	CROSS_COMPILE=aarch64-linux-gnu- CFLAGS= LDFLAGS= dh_auto_build -- V=$(VERBOSE) DEBUG=0 PLAT=$@ bl31
+	install -m644 build/$@/release/$(target) -Dt build/renamed/$@
 endif
 
 override_dh_installchangelogs:
