salsa-ci: Disable autopkgtest tests.

--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -3,6 +3,8 @@ include:
   - https://salsa.debian.org/salsa-ci-team/pipeline/raw/master/recipes/debian.yml
 
 variables:
+  # no autopkgtest tests
+  SALSA_CI_DISABLE_AUTOPKGTEST: 1
   # No arch:all packages
   SALSA_CI_DISABLE_BUILD_PACKAGE_ALL: 1
 
