debian/rules: Add sun50i_h6 subplatform without PMIC regulators. (Closes: #1032395)
Commit fb23b104 to TF-A introduced setting up power regulators on the
H6. Unfortunately this broke Ethernet on some H6 boards such as the
Orange Pi One Plus and the Orange Pi 3, because the Ethernet PHY
requires certain regulators to be brought up together, not the way TF-A
does it.

For that reason, commit 67412e4d introduced a build option
SUNXI_SETUP_REGULATORS to be set to 0 for those boards. In that case
TF-A leaves the regulators alone and the kernel sets them up later. It's
documented in docs/plat/allwinner.rst.

--- a/debian/rules
+++ b/debian/rules
@@ -33,6 +33,13 @@ imx8mm_uart1_assigns := IMX_BOOT_UART_BASE=0x30860000
 imx8mm_uart3_assigns := IMX_BOOT_UART_BASE=0x30880000
 imx8mm_uart4_assigns := IMX_BOOT_UART_BASE=0x30A60000
 
+# TF-A's regulator setup breaks Ethernet on some H6 boards,
+# so make it optional by having two subplatforms:
+#   * sun50i_h6: default configuration
+#   * sun50i_h6_leave_regulators: skip regulator setup
+sun50i_h6_subplatforms := sun50i_h6 sun50i_h6_no_pmic
+sun50i_h6_leave_regulators_assigns := SUNXI_SETUP_REGULATORS=0
+
 rk3328_targets := bl31/bl31.elf
 rk3399_targets := bl31/bl31.elf
 
