--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,8 @@ VERBOSE=1
 endif
 
 platforms := g12a gxbb sun50i_a64 sun50i_h6 rcar rk3328 rk3399 rpi3 rpi4 imx8mn imx8mm
-platforms_nodebug := imx8mq
+# Disable building of imx8mq, as it is not well supported upstream.
+#platforms_nodebug := imx8mq
 
 # By default, iMX8MN uses UART2 console. However, other boards supported
 # upstream (e.g. Variscite VAR-SOM-MX8M-NANO board) uses UART4.
