--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -8,7 +8,7 @@ variables:
   # No arch:all packages
   SALSA_CI_DISABLE_BUILD_PACKAGE_ALL: 1
 
-test-build-arm64:
+build:
   image: ${SALSA_CI_IMAGES}/arm64v8/base:${RELEASE}
   variables:
     BUILD_ARCH: 'arm64'
