--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -7,10 +7,5 @@ variables:
   SALSA_CI_DISABLE_AUTOPKGTEST: 1
   # No arch:all packages
   SALSA_CI_DISABLE_BUILD_PACKAGE_ALL: 1
-
-build:
-  image: ${SALSA_CI_IMAGES}/arm64v8/base:${RELEASE}
-  variables:
-    BUILD_ARCH: 'arm64'
-  tags:
-    - arm64
+  # Enable arch:arm64 builds
+  SALSA_CI_DISABLE_BUILD_PACKAGE_ARM64: 0
